Brought some personal style in the Design BusinessCard Lab

--- a/CSS/BusinessCard/index.html
+++ b/CSS/BusinessCard/index.html
@@ -12,9 +12,9 @@
         <img class="profile-image" src="https://cdn.freecodecamp.org/curriculum/labs/flower.jpg"  alt="profile photo">
         <p class="full-name">Fazluddinn Faayez</p>
         <p class="designation">Web Developer</p>
-        <p class="company">freeCodeCamp</p>
+        <p class="company">@freeCodeCamp</p>
         <hr>
-        <p>Email: fazluddin.fayez@gmail.com</p>
+        <p >Email: fazluddin.fayez@gmail.com</p>
         <p>Phone: 9158630452</p>
         <a href="https://www.freecodecamp.org/">Portfolio</a>
         <hr>
