Just removed a additional single qoutation letter

--- a/CSS/EventFlyerPage/index.html
+++ b/CSS/EventFlyerPage/index.html
@@ -27,7 +27,7 @@
         <ul>
       </section>
 
-      <section ">
+      <section >
         <h2>Special Guests</h2>
         <ul>
           <li>John Gravel</li>
