Paractice of EventHub, Heart Icon, IframeVideoDisplay, JobTips, MajorWebBrowser and VideoCompilationPage Done

--- a/HTML/BookStorePage.html
+++ b/HTML/BookStorePage.html
@@ -1,4 +1,13 @@
-<h1>XYZ Bookstore</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>XYZ Bookstore</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <h1>XYZ Bookstore</h1>
 <p>Browse our collection of amazing books!</p>
 <div class="card-container">
   <div class="card" id="sally-adventure-book">
@@ -17,3 +26,5 @@
   <button id="view-cart-btn" class="btn">View Cart</button>
   <button id="checkout-btn" class="btn">Checkout</button>
 </div>
+</body>
+</html>
